# Agent_Sheriff

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/agentsheriff/: __init__.py  agents.py  config.py  evals.py  gateway.py  main.py  streams.py
backend/src/agentsheriff/adapters/: __init__.py  _common.py  _seed.py  browser.py  calendar.py  files.py  github.py  gmail.py  manifest.py  shell.py
backend/src/agentsheriff/api/: agents.py  approvals.py  audit.py  auth.py  db.py  demo.py  errors.py  evals.py  openclaw.py  policies.py  skills.py  tool_calls.py  tools.py
backend/src/agentsheriff/approvals/: __init__.py  queue.py  service.py
backend/src/agentsheriff/audit/: __init__.py  store.py
backend/src/agentsheriff/demo/: __init__.py  deputy_dusty.py
backend/src/agentsheriff/models/: dto.py  orm.py
backend/src/agentsheriff/notifications/: __init__.py  telegram.py
backend/src/agentsheriff/openclaw/: __init__.py  envelope.py  translator.py
backend/src/agentsheriff/policy/: engine.py  store.py
backend/src/agentsheriff/skills/: __init__.py  laws.py  parser.py  registry.py
backend/src/agentsheriff/threats/: __init__.py  classifier.py  detector.py  evaluator.py  generator.py
backend/tests/: conftest.py  test_adapters.py  test_api_contract.py  test_approvals.py  test_audit.py  test_auth.py  test_classifier.py  test_config.py  test_demo_scenarios.py  test_detector.py  test_errors.py  test_evals.py  test_evaluator.py  test_gateway.py  test_generator.py  test_openclaw_translator.py  test_policies.py  test_skills.py  test_telegram.py
(+87 files in other folders)
