[project]
name = "agentsheriff-backend"
version = "0.1.0"
description = "Local policy gateway backend for AgentSheriff"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.3.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsheriff"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
